--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Página de Inicio</title>
+  <link rel="icon" type="image/png" href="/icons/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
