--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,6 +12,7 @@
       <li><a href="/">Inicio</a></li>
       <li><a href="/dashboard">Lista de Paises</a></li>
       <li><a href="/paises/nuevo">Agregar Nuevo Pais</a></li>
+      <li><a href="/contacto">Contáctanos</a></li>
     </ul>
   </div>
 </nav>
