--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,11 +4,11 @@
     <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
       <img src="/icons/instagram.png" alt="Instagram" width="32" height="32">
     </a>
-    <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+    <a href="https://www.linkedin.com/in/virgidiaz" target="_blank" aria-label="LinkedIn">
       <img src="/icons/linkedin.png" alt="LinkedIn" width="32" height="32">
     </a>
-    <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-      <img src="/icons/facebook.png" alt="Facebook" width="32" height="32">
+    <a href="https://github.com/VickyDiaz47/SP5TP1" target="_blank" aria-label="GitHub">
+      <img src="/icons/git.png" alt="Facebook" width="32" height="32">
     </a>
   </div>
 </footer>
